--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,7 +11,9 @@
 							<h1 class="text-white">
 								Contact Us				
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="contact.html"> Contact Us</a></p>
+							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>
+								<a href="contact.html"> Contact Us</a>
+							</p>
 						</div>	
 					</div>
 				</div>
@@ -61,14 +63,21 @@
 											{% csrf_token %}
 
 									<div class="col-lg-6 form-group">
-										<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control" required="" type="text">
+										<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'"
+											   class="common-input mb-20 form-control" required="" type="text">
 									
-										<input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mb-20 form-control" required="" type="email">
+										<input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
+											   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'"
+											   class="common-input mb-20 form-control" required="" type="email">
 
-										<input name="subject" placeholder="Enter subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter subject'" class="common-input mb-20 form-control" ="" type="text">
+										<input name="subject" placeholder="Enter subject" onfocus="this.placeholder = ''"
+											   onblur="this.placeholder = 'Enter subject'" class="common-input mb-20 form-control" type="text">
 									</div>
 									<div class="col-lg-6 form-group">
-										<textarea class="common-textarea form-control" name="message" placeholder="Enter Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Messege'" required=""></textarea>
+										<textarea class="common-textarea form-control" name="message" placeholder="Enter Messege"
+												  onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Messege'" required="">
+
+										</textarea>
 									</div>
 									<div class="col-lg-12">
 											{{form.captcha}}
