--- a/templates/user_template/login.html
+++ b/templates/user_template/login.html
@@ -95,7 +95,7 @@
           </div>
           <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-center mt-4">
             <a href="{% url 'user_auth:signup_page' %}" class="link-secondary text-decoration-none">Create new account</a>
-            <a href="{% url 'user_auth:forgot_page' %}" class="link-secondary text-decoration-none">Forgot password</a>
+            <a href="{% url 'user_auth:password_reset' %}" class="link-secondary text-decoration-none">Forgot your password</a>
 
           </div>
         </div>
