--- a/templates/user_template/password_reset_form.html
+++ b/templates/user_template/password_reset_form.html
@@ -1,4 +1,4 @@
-{%load static%}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,11 +33,11 @@
           </div>
           <div class="card border border-light-subtle rounded-4">
             <div class="card-body p-3 p-md-4 p-xl-5">
-              <form method="post" action="{% url 'accounts:password_reset' %}">
+              <form method="post" action="#"> <!-- {% url 'user_auth:password_reset_done' %} -->
                 {%csrf_token%}
-                <!-- <p class="text-center mb-4">Or forget psswordusing email</p> -->
+
                 <div class="row gy-3 overflow-hidden">
-                  <!-- {{form.as_p}} -->
+
                   <div class="col-12">
                   </div>
                   <div class="col-12">
