--- a/templates/user_template/password_reset_confirm.html
+++ b/templates/user_template/password_reset_confirm.html
@@ -17,7 +17,7 @@
         <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
           <div class="mb-5">
             <div class="text-center mb-4">
-              <a href="#!">
+              <a href="#">
                 <!-- <img src="./assets/img/bsb-logo.svg" alt="BootstrapBrain Logo" width="175" height="57"> -->
               </a>
             </div>
@@ -34,18 +34,18 @@
           <div class="card border border-light-subtle rounded-4">
             <div class="card-body p-3 p-md-4 p-xl-5">
               <form method="post" action="{% url 'user_auth:password_reset_complete' %}">
-                {%csrf_token%}
-                <!-- <p class="text-center mb-4">Or Sign up using email</p> -->
+                {% csrf_token %}
+
                 <div class="row gy-3 overflow-hidden">
-                  <!-- {{form.as_p}} -->
+
                   <div class="col-12">
                     <div class="form-floating mb-3">
-                      <input type="password" class="form-control" name="password1" value="" placeholder="Password" required>
+                      <input type="password" class="form-control" name="new_password1" value="" placeholder="Password" required>
                       <label for="password" class="form-label">Password</label>
                     </div>
                    <div class="col-12">
                         <div class="form-floating mb-3">
-                          <input type="password" class="form-control" name="password2" value="" placeholder="Confirm Password" required>
+                          <input type="password" class="form-control" name="new_password2" value="" placeholder="Confirm Password" required>
                           <label for="password" class="form-label">Confirm Password</label>
                         </div>
                   </div>
