--- a/templates/user_template/password_reset_done.html
+++ b/templates/user_template/password_reset_done.html
@@ -17,17 +17,15 @@
         <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
           <div class="mb-5">
             <div class="text-center mb-4">
-              <a href="#!">
-                <!-- <img src="./assets/img/bsb-logo.svg" alt="BootstrapBrain Logo" width="175" height="57"> -->
-              </a>
+
             </div>
             <h4 class="text-center mb-4">Welcome to page password reset done</h4>
             <h4 class="text-center mb-4">Email successfully sent to user</h4>
           </div>
           <div class="card border border-light-subtle rounded-4">
             <div class="card-body p-3 p-md-4 p-xl-5">
-              <form method="post" action="#"> <!-- {%url 'user_auth:password_reset_done'%} -->
-                {%csrf_token%}
+              <form method="post" action="#">
+                {% csrf_token %}
                 <div class="row gy-3 overflow-hidden">
                   <div class="col-12">
                   </div>
