--- a/templates/user_template/password_reset_confirm.html
+++ b/templates/user_template/password_reset_confirm.html
@@ -34,6 +34,7 @@
 
           <div class="card border border-light-subtle rounded-4">
             <div class="card-body p-3 p-md-4 p-xl-5">
+              {% if validlink %}
               <form method="post" action="{% url 'user_auth:password_reset_complete' %}">
                 {% csrf_token %}
 
@@ -60,6 +61,10 @@
                 </div>
                </div>
               </form>
+              {% else %}
+                <h3>The password reset link was invalid, possibly because it has already been used. Please request a
+                  new password reset link</h3>
+              {% endif %}
             </div>
           </div>
 
