--- a/templates/base.html
+++ b/templates/base.html
@@ -147,7 +147,8 @@
 									<form  action="{% url 'newsletter' %}" method="post" class="subscription relative">
 												{% csrf_token %}
 										<div class="input-group d-flex flex-row">
-											<input name="email" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
+											<input name="email" placeholder="Email Address" onfocus="this.placeholder = ''"
+												   onblur="this.placeholder = 'Email Address '" required="" type="email">
 											<button class="btn bb-btn" type="submit"><span class="lnr lnr-location"></span></button>
 										</div>
 										<div class="mt-10 info"></div>
