--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load compress %}
 <!DOCTYPE html>
 	<html lang="zxx" class="no-js">
 	<head>
@@ -21,6 +22,7 @@
 			<!--
 			CSS
 			============================================= -->
+		{% compress css %}
 			<link rel="stylesheet" href="{% static 'css/linearicons.css' %}">
 			<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 			<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
@@ -30,6 +32,7 @@
 			<link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
 			<link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
 			<link rel="stylesheet" href="{% static 'css/main.css' %}">
+		{% endcompress %}
 		</head>
 		<body>	
 			<header id="header">
@@ -187,11 +190,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</footer>
 			<!-- End footer Area -->
-
+			{% compress js %}
 			<script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
 			<script src="{% static 'js/popper.min.js' %}"></script>
 			<script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
+			 {% endcompress %}
 			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+			 {% compress js %}
  			<script src="{% static 'js/jquery-ui.js' %}"></script>
   			<script src="{% static 'js/easing.min.js' %}"></script>
 			<script src="{% static 'js/hoverIntent.js' %}"></script>
@@ -202,6 +207,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="{% static 'js/owl.carousel.min.js' %}"></script>
 			<script src="{% static 'js/mail-script.js' %}"></script>
 			<script src="{% static 'js/main.js' %}"></script>
+			{% endcompress %}
 		</body>
 	</html>
 
