--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,30 @@
     <body>
 
        		 {% include 'messages.html' %}
-
+				{% if messages %}
+				{% for message in messages %}
+				<div class="alert {% if message.tags %} alert-{{ message.tags }}{% endif %}">{{ message|safe }}</div>
+				{% endfor %}
+				{% endif %}
+		
+				{% if form.errors %}
+				<div class="alert alert-error">
+					<h4>Please fix the following errors</h4>
+					<ul>
+						{% for field in form %}
+						{% if field.errors %}
+						{% for error in field.errors %}
+						<li><a href="#id_{{ field.name }}" class="error">{{ error|escape }}</a></li>
+						{% endfor %}
+						{% endif %}
+						{% endfor %}
+					</ul>
+					{% if form.non_field_errors %}
+					{{ form.non_field_errors }}
+					{% endif %}
+				</div>
+				{% endif %}
+				
             {% block content %}  <!-- 'content' is the name of block -->
 			{% endblock %}
 
