--- a/templates/blog_items/blog-search.html
+++ b/templates/blog_items/blog-search.html
@@ -1,5 +1,5 @@
 <div class="single-sidebar-widget search-widget">
-<form class="search-form" action="{% url 'blog_show:search_index' %}" method="get">
+<form class="search-form" action="{% url 'blog_show:search_index' %}" method="GET">
 	<input placeholder="Search Posts" name="s" type="text" onfocus="this.placeholder = ''"  onblur="this.placeholder = 'Search Posts'" >
 	<button type="submit"><i class="fa fa-search"></i></button>
 </form>
